playing with styles

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -68,13 +68,13 @@
 							<a href="#home" class="scrollto">Home</a>
 						</li>
 						<li>
-							<a href="#services" class="scrollto">Skills</a>
+							<a href="#skills" class="scrollto">Skills</a>
 						</li>
 						<li>
 							<a href="#about" class="scrollto">About</a>
 						</li>
 						<li>
-							<a href="#portfolio" class="scrollto">Applications</a>
+							<a href="#applications" class="scrollto">Applications</a>
 						</li>
 						<li>
 							<a href="#contact" class="scrollto">Contact</a>
@@ -90,14 +90,14 @@
 			<div class="container">
 				<div class="message-box clearfix">
 					<div class="left-col">
-						<p>I AM <span>Peter Woo</span><br/>and I'm a web</p>
+						<p>I AM <span>Peter Woo</span><br/>Front End</p>
 					</div>	
 					
 					<div class="right-col flexslider home-slider" style="z-index:1;">
 						<ul class="slides">
-							<li><p>Designer</p></li>
 							<li><p>Developer</p></li>
-							<li><p>User</p></li>
+							<li><p>Developer</p></li>
+							<li><p>Developer</p></li>
 						</ul>
 					</div><!--End home-slider -->
 				</div><!--End message-box -->
@@ -237,7 +237,7 @@
 					<div class="col-sm-6 col-sm-offset-1 scrollimation fade-left">
 						<h1>Hello, I am Peter Woo</h1>
 						<p>I'm a front end developer living in <a href="https://www.google.com/maps/place/Irvine,+CA" target="_blank">Irvine, California</a>.</p>
-						<a href="#portfolio" class="btn btn-theme transparent scrollto">View my Works</a>
+						<a href="#applications" class="btn btn-theme transparent scrollto">View my Works</a>
 					</div>
 				</div><!--End row -->
 			</div><!--End container -->
@@ -270,9 +270,9 @@
 	
 																<!-- ********** CHANGE DATA FILTER FOR PORTFOLIO FILTERS ********** -->
 		<!-- ==============================================PORTFOLIO=============================================== -->	
-		<section  id="portfolio">
+		<section  id="applications">
 			<div id="portfolio-header" class="text-center">
-				<h1 class="section-title scrollimation scale-in">Some <span>Applications</span> I developed<i class="fa fa-cogs"></i></h1>
+				<h1 class="section-title scrollimation scale-in"><span>Applications</span> developed<i class="fa fa-cogs"></i></h1>
 				
 				<!--==== Portfolio Filters ====-->
 				<div id="filter-works">
