--- a/HTML/index.html
+++ b/HTML/index.html
@@ -77,7 +77,7 @@
 							<a href="#contact" class="scrollto">Contact</a>
 						</li>
 						<li>
-							<a href="#resume" target="_blank">Resume</a>
+							<a class="resume-link" target="_blank">Resume</a>
 						</li>
 					</ul>
 				</div><!--End navbar-collapse -->
@@ -126,7 +126,7 @@
 							It extended when a friend introduced me to web development, which combined my love of technology with the ability to create.
 						</p>
 						<p>
-							Wanting to dive deeper, I attended LearningFuze, an accelerated web development program, where I spent over 700 hours learning web development.
+							Wanting to dive deeper, I attended Learning Fuze, an accelerated web development program, where I spent over 700 hours learning web development.
 							I had the chance to work with a number of great developers and create many apps of my own, most notable being, Stubbies.
 							Stubbies is an app that allows students studying the same subject, to connect with one another, creating events that allow other users to find and join.
 						</p>
@@ -244,10 +244,10 @@
 							<a href="#" data-filter="*">All</a>
 						</li>
 						<li>
-							<a href="#" data-filter=".solo">Solo</a>
+							<a href="#" data-filter=".javascript">JavaScript</a>
 						</li>
 						<li>
-							<a href="#" data-filter=".group">Group</a>
+							<a href="#" data-filter=".react">React.js</a>
 						</li>
 					</ul>
 				</div><!--End project filters -->
@@ -256,37 +256,29 @@
 				<div class="container masonry-wrapper scrollimation fade-in">
 					<div id="projects-container">
 						<!-- ==============================================SINGLE PROJECT ITEM=============================================== -->	
-						<div class="project-item solo">
+						<div class="project-item react">
 							<img class="img-responsive project-image" src="assets/projects/project-thumb.jpg">
 							<div class="hover-mask">
 								<h2 class="project-title">Stubbies</h2>
 								<p><span class="stubbies live">Live</span> || <span class="stubbies code">Code</span></p>
 							</div>
-						</div> <!-- END PROJECT ITEM -->						
-						
-						<div class="project-item group">
-							<img class="img-responsive project-image" src="assets/projects/project-thumb.jpg">
+						</div> <!-- END PROJECT ITEM -->
+								
+						<div class="project-item javascript">
+							<img class="img-responsive project-image" src="assets/projects/tictac.jpg">
 							<div class="hover-mask">
-								<h2 class="project-title">Project 2</h2>
-								<p><span class="project2 live">Live</span> || <span class="project2 code">Code</span></p>
+								<h2 class="project-title">Tic-Tac-Duck-Hunt</h2>
+								<p><span class="ticTac live">Live</span> || <span class="ticTac code">Code</span></p>
 							</div>
 						</div><!--End Project Item -->
 	
-						<div class="project-item solo">
-							<img class="img-responsive project-image" src="assets/projects/project-thumb.jpg">
+						<div class="project-item javascript">
+							<img class="img-responsive project-image" src="assets/projects/fridgebridge.jpg">
 							<div class="hover-mask">
-								<h2 class="project-title">Project 3</h2>
-								<p><span class="project3 live">Live</span> || <span class="project3 code">Code</span></p>
+								<h2 class="project-title">Fridge Bridge</h2>
+								<p><span class="fridgeBridge live">Live</span> || <span class="fridgeBridge code">Code</span></p>
 							</div>
-						</div><!--End Project Item -->
-	
-						<div class="project-item group">
-							<img class="img-responsive project-image" src="assets/projects/project-thumb.jpg">
-							<div class="hover-mask">
-								<h2 class="project-title">Project 4</h2>
-								<p><span class="project4 live">Live</span> || <span class="project4 code">Code</span></p>
-							</div>
-						</div><!--End Project Item -->
+						</div><!--End Project Item -->					
 					</div>
 				</div><!-- End Main Projects --> 
 			</div>
@@ -364,7 +356,7 @@
 						<ul class="footer-nav">
 							<li><a href="https://github.com/oowretep" target="blank"><i class="fa fa-github fa-3x"></i><br>GitHub</a></li>
 							<li><a href="https://www.linkedin.com/in/oowretep/" target="blank"><i class="fa fa-linkedin-square fa-3x"></i><br>LinkedIn</a></li>
-							<li><a href="#home" target="blank"><i class="fa fa-file-text-o fa-3x"></i><br>Resume</a></li>
+							<li><a class="resume-link" target="blank"><i class="fa fa-file-text-o fa-3x"></i><br>Resume</a></li>
 						</ul>
 						<h5>©2018 | Peter Woo</h5>
 					</div>
