changing about me section

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -122,7 +122,7 @@
 						<h2>About Me</h2>
 						<p>
 							All my life, I have always been driven towards <b>creativity</b>. At an early age I discovered my passion for creating with music producing.
-							I love the opportunity to think of a solution or feature thats "outside the box" and different, yet just affective as the normal.
+							I love the opportunity to think of a solution or feature that's "outside the box" and different, yet just effective as the normal.
 							It extended when a friend introduced me to web development, which combined my love of technology with the ability to create.
 						</p>
 						<p>
