fixed project images + stubbies links

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -257,7 +257,7 @@
 					<div id="projects-container">
 						<!-- ==============================================SINGLE PROJECT ITEM=============================================== -->	
 						<div class="project-item react">
-							<img class="img-responsive project-image" src="assets/projects/project-thumb.jpg">
+							<img class="img-responsive project-image stubbies-img" src="assets/projects/stubbies.jpg">
 							<div class="hover-mask">
 								<h2 class="project-title">Stubbies</h2>
 								<p><span class="stubbies live">Live</span> || <span class="stubbies code">Code</span></p>
@@ -265,7 +265,7 @@
 						</div> <!-- END PROJECT ITEM -->
 								
 						<div class="project-item javascript">
-							<img class="img-responsive project-image" src="assets/projects/tictac.jpg">
+							<img class="img-responsive project-image tictac-img" src="assets/projects/tictac.jpg">
 							<div class="hover-mask">
 								<h2 class="project-title">Tic-Tac-Duck-Hunt</h2>
 								<p><span class="ticTac live">Live</span> || <span class="ticTac code">Code</span></p>
@@ -273,7 +273,7 @@
 						</div><!--End Project Item -->
 	
 						<div class="project-item javascript">
-							<img class="img-responsive project-image" src="assets/projects/fridgebridge.jpg">
+							<img class="img-responsive project-image fridgebridge-img" src="assets/projects/fridgebridge.jpg">
 							<div class="hover-mask">
 								<h2 class="project-title">Fridge Bridge</h2>
 								<p><span class="fridgeBridge live">Live</span> || <span class="fridgeBridge code">Code</span></p>
