--- a/HTML/index.html
+++ b/HTML/index.html
@@ -116,10 +116,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-4 col-sm-offset-1 scrollimation fade-right about-photo">
-						<img class="img-responsive img-circle img-center" src="assets/about-img.png" alt="">
+						<img class="img-responsive img-center" src="assets/about-img.png" alt="">
+						<div class="about-ab"></div>
 					</div>
 					<div class="col-sm-6 col-sm-offset-1 scrollimation fade-left">
-						<h2>About Me</h2>
+						<h2 class="ribbon-title section-title">About Me</h2>
 						<p>
 							All my life, I have always been driven towards <b>creativity</b>. At an early age I discovered my passion for creating with music producing.
 							I love the opportunity to think of a solution or feature that's "outside the box" and different, yet just effective as the normal.
@@ -148,7 +149,7 @@
 		<!-- ==============================================SKILLS=============================================== -->
 		<section id="skills">
 			<div class="container">
-				<h2 class="section-title scrollimation scale-in">Skills</h2>
+				<h2 class="section-title scrollimation scale-in ribbon-title">Skills</h2>
 				<div class="scrollimation fade-right devicon">
 					<div>
 						<svg viewBox="0 0 128 128">
@@ -235,7 +236,7 @@
 		<!-- ==============================================PORTFOLIO=============================================== -->	
 		<section id="applications">
 			<div id="portfolio" class="text-center">
-				<h2 class="section-title scrollimation scale-in">Applications developed</h2>
+				<h2 class="section-title scrollimation scale-in ribbon-title">Apps developed</h2>
 				
 				<!--==== Project Filters ====-->
 				<div id="filter-works">
@@ -287,7 +288,9 @@
 		<!-- ==============================================CONTACT=============================================== -->	
 		<section  id="contact">
 			<div class="container">
-				<h2 class="section-title scrollimation scale-in"><span>Contact</span> me</h2>
+				<h2 class="section-title scrollimation scale-in ribbon-title contact-title">
+					<span>Contact</span> me
+				</h2>
 				<div class="row">
 					<div class="col-sm-5 contact-info scrollimation fade-right">
 						<p>Feel free to contact me or send me a message!</p>
