added toggle feature for color scheme. Working on actual styling later

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -18,6 +18,7 @@
 		<link rel="stylesheet" href="css/flexslider.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" type="text/css" href="css/dark.css" id="color-switcher">
 		
 		<!-- ==============================================Fonts=============================================== -->
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic,900' rel='stylesheet' type='text/css'>
@@ -61,6 +62,24 @@
 				
 				<div id="site-nav" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
+						<li>
+							<div class="toggleWrapper">
+								<input type="checkbox" class="dn inputCheck" id="dn"/>
+								<label for="dn" class="toggle">
+									<span class="toggle__handler">
+										<span class="crater crater--1"></span>
+										<span class="crater crater--2"></span>
+										<span class="crater crater--3"></span>
+									</span>
+									<span class="star star--1"></span>
+									<span class="star star--2"></span>
+									<span class="star star--3"></span>
+									<span class="star star--4"></span>
+									<span class="star star--5"></span>
+									<span class="star star--6"></span>
+								</label>
+							</div>
+						</li>
 						<li>
 							<a href="#home" class="scrollto">Home</a>
 						</li>
