fixing project hover on mobile

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -278,7 +278,7 @@
 						<!-- ==============================================SINGLE PROJECT ITEM=============================================== -->	
 						<div class="project-item react">
 							<img class="img-responsive project-image stubbies-img" src="assets/projects/stubbies.jpg">
-							<div class="hover-mask">
+							<div class="hover-mask" onclick="">
 								<h2 class="project-title">Stubbies</h2>
 								<p><span class="stubbies live">Live</span> || <span class="stubbies code">Code</span></p>
 							</div>
@@ -286,7 +286,7 @@
 								
 						<div class="project-item javascript">
 							<img class="img-responsive project-image tictac-img" src="assets/projects/tictac.jpg">
-							<div class="hover-mask">
+							<div class="hover-mask" onclick="">
 								<h2 class="project-title">Tic-Tac-Duck-Hunt</h2>
 								<p><span class="ticTac live">Live</span> || <span class="ticTac code">Code</span></p>
 							</div>
@@ -294,7 +294,7 @@
 	
 						<div class="project-item javascript">
 							<img class="img-responsive project-image fridgebridge-img" src="assets/projects/fridgebridge.jpg">
-							<div class="hover-mask">
+							<div class="hover-mask" onclick="">
 								<h2 class="project-title">Fridge Bridge</h2>
 								<p><span class="fridgeBridge live">Live</span> || <span class="fridgeBridge code">Code</span></p>
 							</div>
