adding new features/styling

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,12 +13,14 @@
 		<!-- ==============================================Favicons=============================================== -->
 		<link rel="shortcut icon" type="image/x-icon" href="assets/favicon.ico" />
 		
-		<!-- ==============================================CSS=============================================== -->    
+		<!-- ==============================================CSS=============================================== -->   
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/flexslider.css">
 		<link rel="stylesheet" href="css/font-awesome.min.css">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" type="text/css" href="css/dark.css" id="color-switcher">
+		<!-- <link rel="stylesheet" type="text/css" href="css/css3.css">
+		<link rel="stylesheet" type="text/css" href="css/css2.css">  -->
 		
 		<!-- ==============================================Fonts=============================================== -->
 		<link href='http://fonts.googleapis.com/css?family=Lato:400,300,300italic,400italic,700,700italic,900' rel='stylesheet' type='text/css'>
@@ -151,11 +153,11 @@
 							Stubbies is an app that allows students studying the same subject, to connect with one another, creating events that allow other users to find and join.
 						</p>
 						<p>
-							I look forward to working in an environment that would allow my creativity to grow. Please call or email to discuss working together.
+							I look forward to working in an environment that would allow me to grow into an "out-of-the-box" developer. Please call or email to discuss working together.
 						</p>
 					</div>
 					<div class="col-sm-12 scrollimation fade-right about-to-project">
-						<a href="#applications" class="btn btn-theme transparent scrollto">View my Works</a>
+						<a href="#applications" class="btn btn-theme transparent scrollto hoverer-shadow">View my Works</a>
 					</div>
 				</div><!--End row -->
 			</div><!--End container -->
@@ -261,13 +263,13 @@
 				<div id="filter-works">
 					<ul>
 						<li class="active">
-							<a href="#" data-filter="*">All</a>
+							<a href="#" data-filter="*" class="hoverer-shadow">All</a>
 						</li>
 						<li>
-							<a href="#" data-filter=".javascript">JavaScript</a>
+							<a href="#" data-filter=".javascript" class="hoverer-shadow">JavaScript</a>
 						</li>
 						<li>
-							<a href="#" data-filter=".react">React.js</a>
+							<a href="#" data-filter=".react" class="hoverer-shadow">React.js</a>
 						</li>
 					</ul>
 				</div><!--End project filters -->
@@ -376,15 +378,193 @@
 							</a>
 						</div>
 						<ul class="footer-nav">
-							<li><a href="https://github.com/oowretep" target="blank"><i class="fa fa-github fa-3x"></i><br>GitHub</a></li>
-							<li><a href="https://www.linkedin.com/in/oowretep/" target="blank"><i class="fa fa-linkedin-square fa-3x"></i><br>LinkedIn</a></li>
-							<li><a class="resume-link" target="blank"><i class="fa fa-file-text-o fa-3x"></i><br>Resume</a></li>
+							<li><a href="https://github.com/oowretep" target="blank" class="hoverer-shadow"><i class="fa fa-github fa-3x "></i><br>GitHub</a></li>
+							<li><a href="https://www.linkedin.com/in/oowretep/" target="blank" class="hoverer-shadow"><i class="fa fa-linkedin-square fa-3x"></i><br>LinkedIn</a></li>
+							<li><a class="resume-link hoverer-shadow" target="blank"><i class="fa fa-file-text-o fa-3x"></i><br>Resume</a></li>
 						</ul>
 						<h5>©2018 | Peter Woo</h5>
 					</div>
 				</div><!-- End row -->
 			</div><!-- End container -->
 		</footer><!-- End footer -->
+
+
+
+
+
+		<!-- <div class="container">			
+			<div class='container sideHoverAnimation'>
+			<ul>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			<li>
+				<a class='normal' href='#'>
+				<svg viewBox='0 0 80 76' x='0px' y='0px'>
+					<g>
+					<path d='M 68.9708 24.8623 L 60.4554 2.3018 C 59.9641 0.7017 58.1628 -0.2583 56.5252 0.3817 L 1.9822 20.2222 C 0.3822 20.7022 -0.4179 22.6222 0.2222 24.2223 L 8.8624 47.7797 L 8.8624 35.1484 C 8.8624 29.5024 13.3425 24.8623 18.8857 24.8623 L 32.9442 24.8623 L 50.63 12.862 L 60.7829 24.8623 L 68.9708 24.8623 L 68.9708 24.8623 ZM 77.098 32.0625 L 18.8857 32.0625 C 17.2512 32.0625 16.0625 33.4511 16.0625 35.1484 L 16.0625 72.8491 C 16.0625 74.5477 17.2512 75.9375 18.8857 75.9375 L 77.098 75.9375 C 78.742 75.9375 79.9376 74.5477 79.9376 72.8491 L 79.9376 35.1484 C 79.9376 33.4511 78.742 32.0625 77.098 32.0625 L 77.098 32.0625 ZM 73.0626 68.0625 L 23.9375 68.0625 L 23.9375 61.0852 L 31.4704 43.7232 L 42.7696 57.6777 L 53.4138 46.8062 L 67.1695 41.9375 L 73.0626 55.0815 L 73.0626 68.0625 L 73.0626 68.0625 Z'></path>
+					</g>
+				</svg>
+				</a>
+				<div class='info'>
+				<h3>Single-origin coffee whatever</h3>
+				<p>Williamsburg tofu polaroid, 90's Bushwick irony locavore ethnic meh messenger bag Truffaut jean shorts.</p>
+				</div>
+			</li>
+			
+			</ul>
+			</div>
+	
+			<hr>
+		
+			<div class="cubeAnimation">
+			<ul ontouchstart>
+				<li>
+					<div class='link'>
+						<a href='#'></a>
+						<a href='#'></a>
+						<a href='#'></a>
+						<a href='#'></a>
+						<div class='cube codepen'>
+							<div></div>
+							<div></div>
+							<div></div>
+							<div></div>
+							<div>
+								<svg viewbox='0 0 85 85'>
+									<path d='M82.5,29.1666667 L42.5,2.5 L2.5,29.1666667 L2.5,55.8922001 L42.5,82.5 L82.5,55.8922001 L82.5,29.1666667 Z M42.5,2.9120677 L42.5,29.1666667 L42.5,2.9120677 Z M42.5,55.8922001 L42.5,82.5 L42.5,55.8922001 Z M2.5,29.1666667 L2.5,55.8922001 L42.5,29.1666667 L82.5,55.8922001 L82.5,29.1666667 L42.5,55.8922001 L2.5,29.1666667 Z'></path>
+								</svg>
+							</div>
+							<div></div>
+						</div>
+					</div>
+				</li>
+			</ul>
+			<svg class='clips' viewbox='0 0 0 0' xmlns='http://www.w3.org/2000/svg'>
+				<defs>
+					<clippath id='clip-right'>
+						<polygon id='right' points='48 0 48 96 0 48'></polygon>
+					</clippath>
+					<clippath id='clip-left'>
+						<polygon id='left' points='0 0 0 96 48 48'></polygon>
+					</clippath>
+					<clippath id='clip-bottom'>
+						<polygon id='bottom' points='96 48 0 48 48 0'></polygon>
+					</clippath>
+					<clippath id='clip-top'>
+						<polygon id='top' points='0 0 96 0 48 48'></polygon>
+					</clippath>
+				</defs>
+			</svg>
+			</div> -->
+	
+	
+	
+		</div>
+
+		<script src="js/js2.js"></script>
+	
 	</body>
 	
 </html>
